# sedec-to-handle-any-section-of-mpeg-ts

./: .travis.yml  CMakeLists.txt  README  README.md  index.html  params.json
3rd/usr/include/: scxlist.h  scxlock.h  scxlog.h
3rd/usr/include/cpp/: scxthread.h  scxtokenizer.h
examples/decoder/: CMakeLists.txt  decoder_sample.cpp
examples/encoder/: CMakeLists.txt  encoder_sample.cpp
kit/: Makefile
kit/main/: hdk.cpp  hdk.h  hdkaitcontainer.cpp  hdkaitcontainer.h  hdkaitmgr.cpp  hdkaitmgr.h  hdkapp.h  hdkappcontainer.cpp  hdkappcontainer.h  hdkappmgr.cpp  hdkappmgr.h  hdkdsmccmgr.cpp  hdkdsmccmgr.h  hdksystem.cpp  hdksystem.h
libs/: Makefile
libs/sedec/examples/decoder/: Makefile  decoder_sample.cpp
libs/sedec/examples/encoder/: Makefile  encoder_sample.cpp
libs/sedec/include/: ait_section.h  ait_section_transcoder.h  application.h  application_descriptor.h  application_name_descriptor.h  application_recording_descriptor.h  application_usage_descriptor.h  bit_readwriter.h  descriptor.h  descriptor_factory.h  parental_rating_descriptor.h  section.h  section_common.h  simple_application_boundary_descriptor.h  simple_application_location_descriptor.h  transport_protocol_descriptor.h
libs/sedec/src/: Makefile
libs/sedec/src/common/: bit_readwriter.cc  bit_readwriter.cpp  descriptor.cc  descriptor.cpp  descriptor_factory.cc  descriptor_factory.cpp  section.cpp
libs/sedec/src/descriptors/: application.cc  application.cpp  application_descriptor.cc  application_descriptor.cpp  application_name_descriptor.cc  application_name_descriptor.cpp  application_recording_descriptor.cc  application_recording_descriptor.cpp  application_usage_descriptor.cc  application_usage_descriptor.cpp  parental_rating_descriptor.cc  parental_rating_descriptor.cpp  simple_application_boundary_descriptor.cc  simple_application_boundary_descriptor.cpp  simple_application_location_descriptor.cc  simple_application_location_descriptor.cpp  transport_protocol_descriptor.cc  transport_protocol_descriptor.cpp
libs/sedec/src/sections/: ait_section.cc  ait_section.cpp  ait_section_transcoder.cc  ait_section_transcoder.cpp
release/mipsel/stbgcc-4.5.3-1.3/include/sedec/: ait_section.h  ait_section_transcoder.h  application_usage_descriptor.h
release/mipsel/stbgcc-4.5.3-1.3/libs/: libsedec_20150304.md5
release/x86/4.8/include/sedec/: application.h  application_name_descriptor.h  application_recording_descriptor.h  bit_readwriter.h  descriptor.h  parental_rating_descriptor.h  simple_application_boundary_descriptor.h  simple_application_location_descriptor.h
release/x86/4.8/libs/: libsedec.so.0.0.1
sedec/: CMakeLists.txt  Makefile
sedec/include/: ait_section_transcoder.h  application_descriptor.h  application_name_descriptor.h  application_recording_descriptor.h  connection_requirement_descriptor.h  descriptor.h  descriptor_factory.h  section_common.h  transport_protocol_descriptor.h
sedec/src/: Makefile  ait_section_transcoder.cc  application_descriptor.cc  application_name_descriptor.cc  application_recording_descriptor.cc  application_usage_descriptor.cc  connection_requirement_descriptor.cc  descriptor.cc  parental_rating_descriptor.cc  section.cc  simple_application_boundary_descriptor.cc  simple_application_location_descriptor.cc  transport_protocol_descriptor.cc
sedec/src/common/: descriptor.cc  descriptor_factory.cc
sedec/src/descriptors/: application_recording_descriptor.cc  application_usage_descriptor.cc
sedec/src/sections/: ait_section.cc
